--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,23 @@
   display: block;
 }
 
+.divs:hover .div-video::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 90px;
+  bottom: 0;
+  left: 0;
+  z-index: 2;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    to top,
+    rgb(24, 6, 57) 0%,
+    rgba(37, 10, 96, 0.568) 10%,
+    rgba(77, 58, 202, 0.128) 100%
+  );
+}
+
 .swiper-button-prev,
 .swiper-button-next {
   width: 25px;
@@ -98,7 +115,7 @@
   left: 0;
   top: 0;
   bottom: 0;
-  right: calc(100% - var(--previw-progress)*100%);
+  right: calc(100% - var(--previw-progress) * 100%);
   background-color: rgb(150, 150, 150);
 }
 .timeline::after {
@@ -107,35 +124,35 @@
   left: 0;
   top: 0;
   bottom: 0;
-  right: calc(100% - var(--progress-position)*100%);
+  right: calc(100% - var(--progress-position) * 100%);
   background-color: red;
 }
 
-.timeline .thumb-indicator{
+.timeline .thumb-indicator {
   --scale: 0;
   position: absolute;
   height: 200%;
   top: -50%;
   transform: translateX(-50%) scale(var(--scale));
-  left: calc(var(--progress-position)*100%);
+  left: calc(var(--progress-position) * 100%);
   background-color: red;
   border-radius: 50%;
   transition: transform 150ms ease-in-out;
   aspect-ratio: 1/1;
 }
 
-.timeline .preview-img{
+.timeline .preview-img {
   position: absolute;
   height: 80px;
   aspect-ratio: 16/9;
   top: -10px;
-  transform: translate(-50% , -100%);
-  left: calc(var(--progress-position)*100%);
+  transform: translate(-50%, -100%);
+  left: calc(var(--progress-position) * 100%);
   border-radius: 20px;
   border: 2px solid wheat;
   display: none;
 }
-.thumb-img{
+.thumb-img {
   position: absolute;
   top: 0;
   left: 0;
@@ -146,17 +163,15 @@
   display: none;
 }
 
-.video.scrubbing .thumbnail-img{
+.video.scrubbing .thumbnail-img {
   display: block;
 }
-.timeline-container:hover .preview-img{
+.timeline-container:hover .preview-img {
   display: block;
 }
-.timeline-container:hover .thumb-indicator{
-  --scale:1;
+.timeline-container:hover .thumb-indicator {
+  --scale: 1;
 }
-.timeline-container:hover .timeline{
+.timeline-container:hover .timeline {
   height: 100%;
 }
-
-
