--- a/src/index.css
+++ b/src/index.css
@@ -2,18 +2,37 @@
 @tailwind components;
 @tailwind utilities;
 
+.bg{
+  @apply bg-slate-50  dark:border-violet-700 shadow-sm rounded-lg dark:shadow-red-500 dark:bg-[#0d0417] ;
+}
+
 body{
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana;
 }
 
-.menuscroll::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 5px;
-  height: 8px;
-  background-color: #aaa;
+  background-color: rgb(38, 2, 66);
+}
+::-webkit-scrollbar-thumb{
+  height: 10px !important;
+  background-color: rgb(107, 26, 177);
 }
 
+
 .divmenu .active {
-  background: rgb(220, 219, 219);
+  background: rgb(63, 7, 97);
+}
+.linkitemmenu{
+  @apply w-[90%]  mx-auto py-2 flex gap-3 justify-end items-center rounded-xl hover:bg-violet-950 ;
+}
+
+.menu .active{
+  background-color: rgba(79, 41, 114, 0.671);
+  padding: 3px;
+  border: 1px dashed rgb(76, 63, 150);
+  border-radius: 5px;
+  box-shadow: 0px 2px 5px  rgba(85, 15, 177, 0.598);
 }
 
 .text-shortscomponent:hover .btn {
